<resources>
    <string name="app_name">File Owl</string>

    <!-- Home Activity -->
    <string name="read_ext_storage_perm_explanation">This app requires to read the external storage on your device for scanning the files to provide you with disk usage statistics.</string>
    <string name="read_ext_storage_perm_explanation_title">Permission Required</string>
    <string name="read_ext_storage_perm_explanation_positive_btn">ALLOW</string>
    <string name="read_ext_storage_perm_explanation_negative_btn">CANCEL</string>
    <string name="btn_scan_text">Scan</string>

    <!-- layout_largest_files_overview.xml -->
    <string name="text_largest_files">Largest Files</string>
    <string name="text_largest_file_count">(Top 10)</string>
    <string name="dummy_file_name">Some Huge File.avi</string>
    <string name="dummy_file_path">/sdcard/emulated/0/Movies/someHugFile.avi</string>
    <string name="dummy_file_size">18.36 MB</string>
    <string name="button_view_all_text">View All</string>
    <string name="no_data_found">No data Found</string>
    <string name="zero_size">0 B</string>

    <!-- layout_frequent_files_overview.xml -->
    <string name="text_frequent_files">Most frequent files</string>
    <string name="text_frequent_file_count">(Top 5)</string>
    <string name="dummy_file_type">LOG file</string>
    <string name="dummy_file_type_frequency">73 files of this type found</string>
    <string name="text_average_file_size">Average file size</string>
    <string name="dummy_average_file_size">9.45 MB</string>
    <string name="file_type_suffix">"file"</string>
    <string name="file_frequency_suffix">files of this type found</string>

    <!-- layout_average_file_size_overview.xml -->
    <string name="dummy_total_files_scanned">18519 files scanned</string>

    <!-- fragment_home.xml -->
    <string name="text_last_scan_time_label">Last scanned</string>
    <string name="text_lastScanTime_noData">Never</string>

    <!-- menu_home.xml -->
    <string name="menu_item_share">Share</string>
    <string name="menu_item_settings">Settings</string>
    <string name="text_greetings">Hoot Hoot!!</string>
    <string name="text_greetings2">Learn how you use your external storage </string>

    <!-- greeting_fragment.xml -->
    <string name="no_permissions_text">No permissions</string>

    <!-- layout_scan_stat.xml -->
    <string name="text_scan_stat_title">Scan Statistics</string>
    <string name="lyt_scan_last_scanned_label_text">Last scanned\t\t</string>
    <string name="lyt_scan_scanStatus_label_text">Scan status\t\t\t</string>
    <string name="lyt_scan_last_scanned_value_text">Computing</string>
    <string name="lyt_scan_scanStatusValue_computing">Computing</string>
    <string name="lyt_scan_scanStatusValue_scanInProgress">Scan in progress</string>
    <string name="lyt_scan_scanStatusValue_scanError">Scan error</string>
    <string name="lyt_scan_scanStatusValue_scanCancelled">Scan cancelled</string>
    <string name="lyt_scan_scanStatusValue_scanComplete">Scan complete</string>

    <!-- misc -->
    <string name="fragment_list_title_largest_files">Largest Files</string>
    <string name="fragment_list_title_frequent_files">Most Frequent Files</string>
    <string name="button_scanStop_text">STOP SCAN</string>
</resources>
