<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/horizontal_margin_standard"
                android:layout_marginStart="@dimen/horizontal_margin_standard"
                android:layout_marginRight="@dimen/horizontal_margin_standard"
                android:layout_marginEnd="@dimen/horizontal_margin_standard"
                android:layout_marginTop="@dimen/vertical_margin_standard"
                android:layout_marginBottom="@dimen/vertical_margin_standard"
                android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/lyt_scan_stat_title_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:text="@string/text_scan_stat_title"
        android:text="@string/text_scan_stat_title"
        style="@style/OverviewTitleText"/>

    <ImageView
        android:id="@+id/lyt_scan_stat_icon_imgVw_id"
        android:layout_width="@dimen/file_icon_size"
        android:layout_height="@dimen/file_icon_size"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:layout_below="@id/lyt_scan_stat_title_txtVw_id"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_scan_stat"
        android:background="@null" />

    <TextView
        android:id="@+id/lyt_scan_stat_lastScannedLabel_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/lyt_scan_last_scanned_label_text"
        android:text="@string/lyt_scan_last_scanned_label_text"
        style="@style/OverviewSampleName"
        android:layout_below="@id/lyt_scan_stat_title_txtVw_id"
        android:layout_marginTop="@dimen/vertical_margin_small"
        />
    <TextView
        android:id="@+id/lyt_scan_stat_scanStartValue_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/lyt_scan_last_scanned_value_text"
        android:text="@string/lyt_scan_last_scanned_value_text"
        style="@style/ScanStatValue"
        android:layout_below="@id/lyt_scan_stat_title_txtVw_id"
        android:layout_toRightOf="@id/lyt_scan_stat_lastScannedLabel_txtVw_id"
        android:layout_toEndOf="@id/lyt_scan_stat_lastScannedLabel_txtVw_id"
        android:layout_marginTop="@dimen/vertical_margin_small"
    />
    <TextView
        android:id="@+id/lyt_scan_stat_scanStatus_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/lyt_scan_scanStatus_label_text"
        android:text="@string/lyt_scan_scanStatus_label_text"
        style="@style/OverviewSampleName"
        android:layout_below="@id/lyt_scan_stat_lastScannedLabel_txtVw_id"/>
    <TextView
        android:id="@+id/lyt_scan_stat_stanStatusValue_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/lyt_scan_scanStatusValue_computing"
        android:text="@string/lyt_scan_scanStatusValue_computing"
        android:layout_toRightOf="@id/lyt_scan_stat_scanStatus_txtVw_id"
        android:layout_toEndOf="@id/lyt_scan_stat_scanStatus_txtVw_id"
        style="@style/ScanStatValue"
        android:layout_below="@id/lyt_scan_stat_lastScannedLabel_txtVw_id"/>

    <ProgressBar
        android:id="@+id/lyt_scan_stat_scanStatus_prgRssBr_id"
        android:layout_below="@id/lyt_scan_stat_scanStatus_txtVw_id"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminateOnly="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/lyt_scan_stat_btn_scanStop_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin_standard"
        tools:text="@string/button_scanStop_text"
        android:text="@string/button_scanStop_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lyt_scan_stat_scanStatus_prgRssBr_id"
        style="@style/OverviewActionButton"/>

</RelativeLayout>