<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/horizontal_margin_standard"
                android:layout_marginStart="@dimen/horizontal_margin_standard"
                android:layout_marginRight="@dimen/horizontal_margin_standard"
                android:layout_marginEnd="@dimen/horizontal_margin_standard"
                android:layout_marginTop="@dimen/vertical_margin_standard"
                android:layout_marginBottom="@dimen/vertical_margin_standard">

    <TextView
        android:id="@+id/lyt_largest_files_overview_title_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:text="@string/text_largest_files"
        android:text="@string/text_largest_files"
        style="@style/OverviewTitleText"/>

    <TextView
        android:id="@+id/lyt_largest_files_overview_count_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lyt_largest_files_overview_title_txtVw_id"
        android:layout_toEndOf="@id/lyt_largest_files_overview_title_txtVw_id"
        android:layout_marginLeft="@dimen/horizontal_margin_small"
        android:layout_marginStart="@dimen/horizontal_margin_small"
        tools:text="@string/text_largest_file_count"
        android:text="@string/text_largest_file_count"
        style="@style/OverviewTitleTextHighlighted"/>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyt_largest_files_overview_count_txtVw_id"
        android:id="@+id/lyt_largest_files_overview_include_id"
        layout="@layout/item_large_file" />

    <Button
        android:id="@+id/lyt_largest_files_overview_btn_viewAll_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin_standard"
        tools:text="@string/button_view_all_text"
        android:text="@string/button_view_all_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lyt_largest_files_overview_include_id"
        style="@style/OverviewActionButton"/>

</RelativeLayout>