<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/horizontal_margin_standard"
                android:layout_marginStart="@dimen/horizontal_margin_standard"
                android:layout_marginRight="@dimen/horizontal_margin_standard"
                android:layout_marginEnd="@dimen/horizontal_margin_standard"
                android:layout_marginTop="@dimen/vertical_margin_standard"
                android:layout_marginBottom="@dimen/vertical_margin_standard">

    <TextView
        android:id="@+id/lyt_average_title_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:text="@string/text_average_file_size"
        android:text="@string/text_average_file_size"
        style="@style/OverviewTitleText"/>

    <TextView
        android:id="@+id/lyt_average_fileType_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_average_file_size"
        android:text="@string/dummy_average_file_size"
        style="@style/OverviewSampleName"
        android:layout_alignTop="@+id/lyt_average_imgVw_id"
        android:layout_toRightOf="@+id/lyt_average_imgVw_id"
        android:layout_toEndOf="@+id/lyt_average_imgVw_id"
        android:layout_marginLeft="@dimen/horizontal_margin_small"
        android:layout_marginStart="@dimen/horizontal_margin_small"/>
    <TextView
        android:id="@+id/lyt_average_fileFrequency_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_total_files_scanned"
        android:text="@string/dummy_total_files_scanned"
        style="@style/OverviewSampleDescription"
        android:layout_below="@id/lyt_average_fileType_txtVw_id"
        android:layout_toRightOf="@+id/lyt_average_imgVw_id"
        android:layout_toEndOf="@+id/lyt_average_imgVw_id"
        android:layout_marginLeft="@dimen/horizontal_margin_small"
        android:layout_marginStart="@dimen/horizontal_margin_small"/>

    <ImageView
        android:id="@+id/lyt_average_imgVw_id"
        android:layout_width="@dimen/large_file_icon_size"
        android:layout_height="@dimen/large_file_icon_size"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:src="@drawable/ic_plain_fie"
        android:background="@null"
        android:layout_below="@+id/lyt_average_title_txtVw_id"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

</RelativeLayout>