<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_margin_standard"
                android:layout_marginStart="@dimen/horizontal_margin_standard"
                android:layout_marginRight="@dimen/horizontal_margin_standard"
                android:layout_marginEnd="@dimen/horizontal_margin_standard"
                android:layout_marginTop="@dimen/vertical_margin_standard"
                android:layout_marginBottom="@dimen/vertical_margin_standard">

    <ImageView
        android:id="@+id/lyt_large_file_largestFile_imgVw_id"
        android:layout_width="@dimen/large_file_icon_size"
        android:layout_height="@dimen/large_file_icon_size"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_plain_file_pink"
        android:background="@null" />

    <TextView
        android:id="@+id/lyt_large_file_fileName_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_file_name"
        android:text="@string/dummy_file_name"
        style="@style/OverviewSampleName"
        android:layout_alignTop="@+id/lyt_large_file_largestFile_imgVw_id"
        android:layout_toRightOf="@+id/lyt_large_file_largestFile_imgVw_id"
        android:layout_toEndOf="@+id/lyt_large_file_largestFile_imgVw_id"
        android:layout_marginLeft="@dimen/horizontal_margin_small"
        android:layout_marginStart="@dimen/horizontal_margin_small"/>
    <TextView
        android:id="@+id/lyt_large_file_filePath_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_file_path"
        android:text="@string/dummy_file_path"
        style="@style/OverviewSampleDescription"
        android:layout_alignBottom="@id/lyt_large_file_largestFile_imgVw_id"
        android:layout_below="@id/lyt_large_file_fileName_txtVw_id"
        android:layout_toRightOf="@+id/lyt_large_file_largestFile_imgVw_id"
        android:layout_toEndOf="@+id/lyt_large_file_largestFile_imgVw_id"
        android:layout_marginLeft="@dimen/horizontal_margin_small"
        android:layout_marginStart="@dimen/horizontal_margin_small"/>

    <TextView
        android:id="@+id/lyt_large_file_fileSize_txtVw_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_file_size"
        android:text="@string/dummy_file_size"
        style="@style/LargeFileSize"
        android:layout_alignBaseline="@+id/lyt_large_file_fileName_txtVw_id"
        android:layout_alignBottom="@+id/lyt_large_file_fileName_txtVw_id"
        android:layout_alignParentRight="true" 
        android:layout_alignParentEnd="true"/>
    
</RelativeLayout>